# git-credential-pass

./: Cargo.toml  README.md  TODO_RELEASE.md  verify.sh
packaging/: .gitignore  PKGBUILD  makepkg_deb.sh
src/: main.rs  paramparsing.rs  pass.rs  templating.rs  tests.rs  utils.rs  verbosity.rs
testing/: cleanup.sh  test.sh
testing/templates/: default.template  invalidtokenorder.template
