[package]
name = "git-credential-pass"
description="A simple git credentials helper for gnu pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
stderrlog = "0.5.4"
thiserror = "1.0.50"
